fix font size of breads on mobile

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10300,6 +10300,11 @@ h6 {
   line-height: 1.1;
   font-weight: 400;
 }
+@media screen and (max-width: 556px) {
+  .bread {
+    font-size: 30px;
+  }
+}
 
 #formSection {
   position: relative;
